--- a/D03CBX_HFT_2023241.Client/D03CBX_HFT_2023241.Client.csproj
+++ b/D03CBX_HFT_2023241.Client/D03CBX_HFT_2023241.Client.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
+  </ItemGroup>
+
 </Project>
