--- a/D03CBX_HFT_2023241.Endpoint/D03CBX_HFT_2023241.Endpoint.csproj
+++ b/D03CBX_HFT_2023241.Endpoint/D03CBX_HFT_2023241.Endpoint.csproj
@@ -1,7 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\D03CBX_HFT_2023241.Logic\D03CBX_HFT_2023241.Logic.csproj" />
+    <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\D03CBX_HFT_2023241.Repository\D03CBX_HFT_2023241.Repository.csproj" />
+  </ItemGroup>
 
 </Project>
