--- a/D03CBX_HFT_2023241.Logic/D03CBX_HFT_2023241.Logic.csproj
+++ b/D03CBX_HFT_2023241.Logic/D03CBX_HFT_2023241.Logic.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
+    <ProjectReference Include="..\D03CBX_HFT_2023241.Repository\D03CBX_HFT_2023241.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
