--- a/D03CBX_HFT_2023241.Client/D03CBX_HFT_2023241.Client.csproj
+++ b/D03CBX_HFT_2023241.Client/D03CBX_HFT_2023241.Client.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ConsoleMenu-simple" Version="2.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
   </ItemGroup>
 
