--- a/D03CBX_HFT_2023241.Endpoint/D03CBX_HFT_2023241.Endpoint.csproj
+++ b/D03CBX_HFT_2023241.Endpoint/D03CBX_HFT_2023241.Endpoint.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\D03CBX_HFT_2023241.Logic\D03CBX_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
     <ProjectReference Include="..\D03CBX_HFT_2023241.Repository\D03CBX_HFT_2023241.Repository.csproj" />
