--- a/D03CBX_HFT_2023241.Test/D03CBX_HFT_2023241.Test.csproj
+++ b/D03CBX_HFT_2023241.Test/D03CBX_HFT_2023241.Test.csproj
@@ -5,9 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Moq" Version="4.17.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\D03CBX_HFT_2023241.Logic\D03CBX_HFT_2023241.Logic.csproj" />
     <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
     <ProjectReference Include="..\D03CBX_HFT_2023241.Repository\D03CBX_HFT_2023241.Repository.csproj" />
   </ItemGroup>
+	
+	
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+	</ItemGroup>
 
 </Project>
