--- a/D03CBX_HFT_2023241.Client/D03CBX_HFT_2023241.Client.csproj
+++ b/D03CBX_HFT_2023241.Client/D03CBX_HFT_2023241.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="ConsoleMenu-simple" Version="2.6.1" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
   </ItemGroup>
 
   <ItemGroup>
