--- a/D03CBX_HFT_2023241.Endpoint/D03CBX_HFT_2023241.Endpoint.csproj
+++ b/D03CBX_HFT_2023241.Endpoint/D03CBX_HFT_2023241.Endpoint.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
