--- a/D03CBX_HFT_2023241.Repository/D03CBX_HFT_2023241 - Backup.Repository.csproj
+++ b/D03CBX_HFT_2023241.Repository/D03CBX_HFT_2023241 - Backup.Repository.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Music.mdf" />
+    <None Remove="Music_log.ldf" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\D03CBX_HFT_2023241.Models\D03CBX_HFT_2023241.Models.csproj" />
   </ItemGroup>
 	<ItemGroup>
